public/_carousel.scss
.menu-item {
  height: 500px;
  width: 250px;
  padding: 0 40px;
  margin: 10px 10px;
  user-select: none;
  // cursor: pointer;
  border: 5px black solid;
}

.outfit-button {
  padding: 0px;
  height: 250px;
  width: 200px;
  font-size: 200px;
  margin: 0px;
}

// .menu-item-wrapper.active {
//   border: 1px blue solid;
// }
// .menu-item.active {
//   border: 1px green solid;
// }

.scroll-menu-arrow {
  padding: 20px;
  cursor: pointer;
}

.scroll-menu-arrow--disabled {
  visibility: hidden;
}

